--- a/views/friends.erb
+++ b/views/friends.erb
@@ -7,7 +7,9 @@
  </head>
  <body>
   <h1> My Super Cool Friends List </h1>
-
+<% @friends.each do |friend|%>
+<h2><%= friend%></h2>
+<% end %>
   <!-- Iterate through the @friends array here to display each item in its own <h2> tag -->
 
 
